good start, cat word is complete, event listeners incomplete

--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<html lang = "en-us">
+	<head>
+		<meta charset = "UTF-8">
+			<title> Hangman Game</title>
 <script type="text/javascript" src="assets/javascript/game.js"></script>
-</head>
-<body></body>
+	</head>
+<body>
+	<h1>Hangman Game</h1>
+	<h2>Press any ket to start!</h2>
+	<h3>Wins: </h3>
+	<h3>Current Word </h3>
+	<div id = "current_word"></div>
+	<h3>Letters Already Guessed: </h3>
+	<div id = "guessed"></div>
+	<h4>Guesses Left:</h4>
+	<div id = "wrong"></div>
+
+</body>
 </html>
