most js done, adding next button and css on next commit

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 	</head>
 <body>
 	<h1>Hangman Game</h1>
-	<h2>Press any ket to start!</h2>
+	<h2>Type any letter to start!</h2>
 	<h3>Wins: </h3>
+	<div id = "win"></div>
 	<h3>Current Word </h3>
 	<div id = "current_word"></div>
 	<h3>Letters Already Guessed: </h3>
 	<div id = "guessed"></div>
 	<h4>Guesses Left:</h4>
 	<div id = "wrong"></div>
+	<button onclick = "javascript:Test('Test');" id = "next_button">Next</button>
 
 </body>
 </html>
