--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
 		<meta charset = "UTF-8">
 		<title> Hangman Game</title>
 		<script type="text/javascript" src="assets/javascript/game.js"></script>
+		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 <body>
 	<h1>Hangman Game</h1>
 	<h2>Type any letter to start!</h2>
-	<h3>Wins: </h3>
-	<div id = "win"></div>
-	<h3>Current Word </h3>
-	<div id = "current_word"></div>
-	<h3>Letters Already Guessed: </h3>
-	<div id = "guessed"></div>
-	<h4>Guesses Left:</h4>
-	<div id = "wrong"></div>
-
+	<div id = "box">
+		<div id = "win_style">
+			<h3>Wins: </h3>
+			<div id = "win"></div>
+		</div>
+		<div id = "word_style">
+			<h3>Current Word:</h3>
+			<div id = "current_word"></div>
+		</div>
+		<div id = "letter_style">
+			<h3>Letters Already Guessed: </h3>
+			<div id = "guessed"></div>
+		</div>
+		<div id = "guess_style">
+			<h3>Guesses Left:</h3>
+			<div id = "wrong"></div>
+		</div>
+	</div>
 </body>
 </html>
