added hangman files

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 			<h3>Guesses Left:</h3>
 			<div id = "wrong"></div>
 		</div>
+		<div id = "hang_style">
+			<div id ="hangman"></div>
+		</div>
 	</div>
 </body>
 </html>
